2010-07-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: fixed
	  unit tests.

2010-07-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Fixed
	  'Bug 621658 - Parameter hints disappear afterkeystroke'.

2010-07-14  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.addin.xml: Fix XML parser
	  availability.

2010-07-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.addin.xml:
	* MonoDevelop.XmlEditor/XmlDocumentParser.cs: Track
	  ProjectDomService/Parser API.

2010-07-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/Parser.cs:
	* MonoDevelop.Xml.StateEngine/XmlNameState.cs:
	* MonoDevelop.Xml.StateEngine/XmlAttributeState.cs:
	* MonoDevelop.Xml.StateEngine/XmlClosingTagState.cs: Better
	  errors.

	* MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs:
	  Newlines are valid in attributes,

2010-07-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Track
	  API changes.

2010-05-21  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor/XmlEditorService.cs: Clean up dialog
	  placement.

2010-05-21  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Fix
	  failing test by making sure that OnParsedDocumentUpdated is
	  called when the file is first loaded, and moving all the new
	  parsed document logic handling there.

2010-05-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Xml.Formatting/XmlFormattingPolicyPanelWidget.cs:
	  Fix translation error.

2010-05-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs:
	* MonoDevelop.XmlEditor.Completion/XmlCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/XmlTagCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/IXmlCompletionProvider.cs: