@@ -1,3 +1,9 @@
+2010-07-18  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs:
+	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Track
+	  API changes.
+
 2010-07-15  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: fixed
